<resources>
    <string name="app_name">Bitcoinium Prime</string>
    <string name="version_name">2.2.2</string>
    <string name="default_exchange">bitstamp</string>
    <string name="default_miningpool">BitMinter</string>
    <string name="default_currency">BTC/USD</string>
    <string name="app_name_free">Bitcoinium</string>
    <string name="link_email_author_free">mailto:veken0m.apps@gmail.com?subject=Bitcoinium Feedback</string>
    <string name="tapToUpdate_free">Tap to Update *Prime Only*</string>
    <string name="link_bitcoiniumPlayStore_free">market://details?id=com.veken0m.cavirtex</string>
    <string name="license">Copyright 2012-2014 Michael Lagacé\n\nLicensed under the Apache License, Version 2.0 (the "License")
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
    \n\n
    http://www.apache.org/licenses/LICENSE-2.0
    \n\n
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.</string>
    <string name="widget_price">Bitcoinium Price</string>
    <string name="widget_mining">Bitcoinium Mining</string>
    <string name="widget_balance">Bitcoinium Balance</string>
    <string name="pref_pickcurrency">Pick a Currency Pair</string>
    <string name="pref_exchange_summary">Select the exchange used for the widget</string>
    <string name="pref_currency_summary">Select the currency pair displayed on the widget</string>
    <string name="pref_price_widget_title">Exchange and Currency</string>
    <string name="about">About</string>
    <string name="aboutBitcoinium">About Bitcoinium</string>
    <string name="address">Address</string>
    <string name="alarmClockMode">Alarm Clock Mode</string>
    <string name="alertLimits">Alert Limits</string>
    <string name="amount">Amount</string>
    <string name="ask">Ask</string>
    <string name="asks">Asks</string>
    <string name="authorText">Author</string>
    <string name="balance">Balance</string>
    <string name="balanceUnits">Balance units</string>
    <string name="balanceValue">Balance Value</string>
    <string name="bid">Bid</string>
    <string name="bids">Bids</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="bitcoinAverage">BitcoinAverage.com</string>
    <string name="bitcoinCharts">Bitcoin Charts</string>
    <string name="bitcoiniumGithub">Bitcoinium Github</string>
    <string name="bitcoinMinerAlert">Bitcoin Miner Alert</string>
    <string name="blockCount">Block count</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="createWidget">Create Widget</string>
    <string name="currency">Currency</string>
    <string name="currencyPairFilter">Currency Pair Filter</string>
    <string name="currentDifficulty">Current Difficulty</string>
    <string name="defaultExchange">Favorite Exchange</string>
    <string name="defaultExchangeCurrency">Default Currency Pairs</string>
    <string name="displayCurrencySymbols">Display Currency Symbols</string>
    <string name="dogecoin">Dogecoin</string>
    <string name="donationAddress">Donation Address</string>
    <string name="donations">Bitcoin Donations</string>
    <string name="email">Email</string>
    <string name="enable">Enable</string>
    <string name="enableLiquidityHighlighting">Enable Liquidity Highlighting</string>
    <string name="enableTickers">Enable Tickers</string>
    <string name="error">Error</string>
    <string name="estimatedNextDifficulty">Estimated Next Difficulty</string>
    <string name="exchange">Exchange</string>
    <string name="extraSettings">Extra Settings</string>
    <string name="feedback">Feedback</string>
    <string name="general">General</string>
    <string name="hashrate">Hashrate</string>
    <string name="high">High</string>
    <string name="highDepth">High Depth</string>
    <string name="internetConnection">Internet Connection</string>
    <string name="last">Last</string>
    <string name="liquidityHighlighting">Liquidity Highlighting</string>
    <string name="litecoin">Litecoin</string>
    <string name="low">Low</string>
    <string name="lowDepth">Low Depth</string>
    <string name="mediumDepth">Medium Depth</string>
    <string name="miner">Miner</string>
    <string name="minerApiTokens">Miner API Tokens</string>
    <string name="minerWidgetSettings">Miner Widget Settings</string>
    <string name="miningPool">Mining Pool</string>
    <string name="miningWidget">Mining Widget</string>
    <string name="notAvailable">N/A</string>
    <string name="notificationDrawerTickers">Notification Drawer Tickers</string>
    <string name="noWidgetFound">No Widget Found</string>
    <string name="ok">OK</string>
    <string name="orderbook">Orderbook</string>
    <string name="payout">Payout</string>
    <string name="pref_pickexchange">Pick an Exchange</string>
    <string name="price">Price</string>
    <string name="priceAlerts">Price Alerts</string>
    <string name="refresh">Refresh</string>
    <string name="retreivingMinerStats">Retrieving Miner Stats</string>
    <string name="selectSound">Select Sound</string>
    <string name="sell">Sell</string>
    <string name="sendEmail">Send email</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="symbol">Symbol</string>
    <string name="symbol_short">Sym.</string>
    <string name="time">Time</string>
    <string name="trades">Trades</string>
    <string name="twitter">Twitter</string>
    <string name="version">Version</string>
    <string name="vibration">Vibration</string>
    <string name="xchangeGithub">XChange Github</string>
    <string name="localCurrency">Local Currency</string>
    <string name="widgetConfigurationText">Widget Configuration</string>
    <string name="refreshOnlyWifi">Update only on WiFi</string>
    <string name="tapToUpdate">Tap to Update</string>
    <string name="powerSaving">Power Saving</string>
    <string name="batterySavingMode">Battery Saver</string>
    <string name="widgetUpdateInterval">Widget Update Interval</string>
    <string name="label_bitcoinAverage">Bitcoin Average</string>
    <string name="label_bitcoinCharts">Bitcoin Charts</string>
    <string name="label_minerStats">Miner Stats</string>
    <string name="label_orderbook">Order Book</string>
    <string name="label_priceGraph">Price Graph</string>
    <string name="label_updateWidgets">Update Widget(s)</string>
    <string name="label_webCharts">Web Charts</string>
    <string name="label_trader">Trader</string>
    <string name="pref_default_currency_summary">Default currency for OrderBook and Price Graph</string>
    <string name="pref_default_exchange_summary">Automatically selected when Bitcoinium opens</string>
    <string name="pref_xchange_summary">A Financial Exchange Library for Java, with support for Bitcoin</string>
    <string name="pref_google_analytics_summary">Provide anonymous data in order to help the developers improve Bitcoinium</string>
    <string name="pref_submitFeatureRequest">Please submit issues and feature requests here</string>
    <string name="msg_rateBitcoinium">Rate Bitcoinium on Play Store!</string>
    <string name="pref_rate_bitcoinium_summary">Ratings, reviews and feedback are greatly appreciated!</string>
    <string name="pref_about_summary">Contact info, feedback and repositories</string>
    <string name="pref_orderbook_limit_title">OrderBook list length limit</string>
    <string name="pref_orderbook_limit_summary">Limit values printed on screen to improve performance</string>
    <string name="pref_highlight_green">Text will be colored GREEN if depth over this value</string>
    <string name="pref_highlight_red">Text will be colored RED if depth under this value</string>
    <string name="pref_highlight_yellow">Text will be colored YELLOW if depth is in between</string>
    <string name="pref_orderbook_currency_symbol_summary">Display currency symbols in the orderbook. \nDisable if text does not fit.</string>
    <string name="pref_liquidity_highlight_summary">Color of text depends on depth</string>
    <string name="label_widgetConfiguration">Widget Configuration (applies to all)</string>
    <string name="bidAskOnWidget">Bid/Ask on Widget</string>
    <string name="displayMilliBtc">Display Bitcoin prices in mBTC</string>
    <string name="disableUpdatesMobile">Disable updates on mobile connection</string>
    <string name="pref_bid_ask_replace_summary">Replace High/Low with Bid/Ask if supported by exchange</string>
    <string name="pref_battery_saving_mode_summary">Disable updates when device is sleeping</string>
    <string name="pref_refresh_interval_summary">Time interval between widget updates. Shorter intervals increase battery drain.</string>
    <string name="pref_tap_refresh_summary">Tapping the widget will update instead of opening app</string>
    <string name="pref_widget_config_summary">Various display and power saving settings</string>
    <string name="pref_milli_btc_summary">Changes all BTC widget prices to mBTC. \nEx: $1010.00 will show as $1.010 \nDoes not affect other crypto-currencies</string>
    <string name="pref_alert_alarm_summary">Uses android built-in Alarm Clock. *Caution* Will override silent/vibration modes and keep ringing until shut off</string>
    <string name="pref_alert_sound_pick_summary">Pick the sound to be played</string>
    <string name="pref_alert_sound_summary">Play a sound when alert is triggered</string>
    <string name="pref_alert_vibrate_summary">Vibrate when alert is triggered</string>
    <string name="pref_price_alert_summary">Notifies when price crosses the alert limit</string>
    <string name="pref_price_alert_title">Price Alert Notifications</string>
    <string name="pref_enable_alert_summary">Push notification when alert triggered for %1$s %2$s</string>
    <string name="pref_enable_alert_title">Enable Price Alert</string>
    <string name="bitcoinAddress">Address to watch</string>
    <string name="pref_address_summary">Input the BTC address to be tracked by the widget</string>
    <string name="pref_input_address">Bitcoin Address</string>
    <string name="addressNickname">Address Nickname</string>
    <string name="pref_address_nickname_summary">Address nickname to be displayed on widget</string>
    <string name="pref_balance_value_summary">Pick a local currency to display value in below balance</string>
    <string name="pref_notification_ticker_summary">Enable tickers in the notification drawer</string>
    <string name="pref_background_wiget_color_summary">Color for widget background</string>
    <string name="pref_update_time_color_fail_summary">Color of the update time if failed</string>
    <string name="pref_update_time_color_success_summary">Color of the update time if successful</string>
    <string name="pref_widget_main_color_summary">Color for Exchange name and Last Price text</string>
    <string name="pref_widget_second_color_summary">Color for High, Low and Volume text</string>
    <string name="pref_widget_theme_summary">Put the theme into effect</string>
    <string name="pref_hashrate_notification_summary">Notifications when hashrate is below 0.01 Mh/s</string>
    <string name="pref_miner_info_summary">Required to access your miner\'s information</string>
    <string name="pref_payout_unit_summary">Select units used to display balances</string>
    <string name="pref_select_mining_pool_summary">Select the mining pool used for the widget</string>
    <string name="about_author">Michael Lagacé (veken0m)</string>
    <string name="email_author">veken0m.apps@gmail.com</string>
    <string name="address_donation_bitcoin">1yjDmiukhB2i1XyVw5t7hpAK4WXo32d54</string>
</resources>