<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="OrderBook Settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showCurrencySymbolPref"
            android:summary="@string/pref_orderbook_currency_symbol_summary"
            android:title="@string/displayCurrencySymbols" />

        <EditTextPreference
            android:defaultValue="100"
            android:digits="01234567890"
            android:inputType="numberDecimal"
            android:key="orderbookLimiterPref"
            android:summary="@string/pref_orderbook_limit_summary"
            android:title="@string/pref_orderbook_limit_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/liquidityHighlighting">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="highlightPref"
            android:summary="@string/pref_liquidity_highlight_summary"
            android:title="@string/enableLiquidityHighlighting" />

        <EditTextPreference
            android:defaultValue="10"
            android:digits="01234567890"
            android:inputType="numberDecimal"
            android:key="depthHighlightUpperPref"
            android:summary="@string/pref_highlight_green"
            android:title="@string/highDepth" />
        <EditTextPreference
            android:summary="@string/pref_highlight_yellow"
            android:title="@string/mediumDepth" />
        <EditTextPreference
            android:defaultValue="1"
            android:digits="01234567890"
            android:inputType="numberDecimal"
            android:key="depthHighlightLowerPref"
            android:summary="@string/pref_highlight_red"
            android:title="@string/lowDepth" />
    </PreferenceCategory>

</PreferenceScreen>