<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Price Widget Extensions">
        <Preference
            android:key="alarmSettingsPref"
            android:summary="@string/pref_price_alert_summary"
            android:title="@string/pref_price_alert_title">
            <intent android:action="com.veken0m.bitcoinium.preferences.PriceAlertPreferencesActivity" />
        </Preference>

        <Preference
            android:key="notificationSettingsPref"
            android:summary="@string/pref_notification_ticker_summary"
            android:title="@string/notificationDrawerTickers">
            <intent android:action="com.veken0m.bitcoinium.preferences.TickerPreferencesActivity" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>